# AlGlobo-Concurrentes

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
actores/: Cargo.toml
actores/src/: comunicacion.rs  external_entity.rs  logger.rs  main.rs  payment_processor.rs  reader.rs
aerolinea/: Cargo.toml
al-globo/: Cargo.toml
al-globo/src/: communication.rs  comunicacion.rs  config.json  config.rs  external_entity.rs  external_entity_receiver.rs  external_entity_sender.rs  leader.rs  logger.rs  main.rs  main.rs.bkp  payment_processor.rs  reader.rs  sender.rs  stats.rs  transaction_manager.rs  types.rs  writer.rs
alglobo/: Cargo.toml
alglobo/src/: archivo.csv  banco.rs  client.rs  client_model.rs  comunicacion.rs  entity_actor.rs  main.rs  procesador_pagos.rs
banco/: Cargo.toml
banco/src/: main.rs
cliente_hardcodeado/: Cargo.toml
cliente_hardcodeado/src/: main.rs
comunicacion/: Cargo.toml
comunicacion/src/: lib.rs
procesador_pagos/: Cargo.toml
procesador_pagos/src/: main.rs
refactor/src/: communication.rs  config.rs  logger.rs  reader.rs  sender.rs  transaction_manager.rs  types.rs
src/: archivo.csv  banco.rs  client.rs  client_model.rs  comunicacion.rs  hotel.rs  procesador_pagos.rs  server_model.rs
