[package]
name = "actores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0"
actix-rt = "2.2"
tokio = { version = "1.19.2", features = ["full"] }
external = { path = "../external" }

[[bin]]
name = "main"
path = "src/main.rs"
