[package]
name = "actores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0"
actix-rt = "2.2"
external = { path = "../external" }
chrono = "0.4.19"

[[bin]]
name = "main"
path = "src/main.rs"
