[package]
name = "al-globo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0"
actix-rt = "2.2"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "al-globo"
path = "src/main.rs"
